# ruckerpark

./: .gitignore  README.md  docker-compose.yml  setup_docker.sh
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: deploy.yml
backend/: .flake8  Dockerfile  pyproject.toml
backend/code/app/: server.py
backend/code/lib/: example_library.py
backend/code/models/: example_model.py
backend/code/test/: test_example_model.py
frontend/: .eslintrc.json  .prettierrc  Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/code/app/: App.html  App.tsx  Body.tsx  Footer.tsx  Header.tsx  Layout.tsx
