[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic="^2.6.3"
fastapi = "^0.110.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
openai = "^1.13.3"
pyairtable = "^2.3.0.post1"
uvicorn = "^0.28.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    .git
    | .venv
    | build
    | dist
    | .pytest_cache
    | .mypy_cache
    | .vscode
    | __pycache__
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"